Change .simple-selector's font-size from "1em" to "1rem"

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -93,7 +93,7 @@ body {
 /* Simple Selector */
 .simple-selector {
   margin-right: 0.5em;
-  font-size: 1em;
+  font-size: 1rem;
   border: 1px solid var(--theme__search-bar__outline-color);
   overflow: hidden;
   text-overflow: ellipsis;
