--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -146,6 +146,34 @@ body {
     transform: translate3d(0, calc(1 * var(--vertical-shake-amount)), 0);
   }
 }
+/* Simple Scroll(bar) */
+.simple-scroll {
+  --scrollbar-size: 0.85rem;
+}
+.simple-scroll::-webkit-scrollbar {
+  width: var(--scrollbar-size);
+  height: var(--scrollbar-size);
+}
+.simple-scroll::-webkit-scrollbar-corner {
+  display: none;
+}
+.simple-scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 calc(0.5 * var(--scrollbar-size)) rgba(0, 0, 0, 0.2);
+  border-radius: calc(0.5 * var(--scrollbar-size));
+}
+.simple-scroll::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 calc(0.5 * var(--scrollbar-size));
+  border-radius: calc(0.5 * var(--scrollbar-size));
+  background-color: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.5);
+}
+.simple-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(24, 24, 24, 0.1);
+}
+.simple-scroll::-webkit-scrollbar-thumb:active {
+  background-color: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.9);
+}
 
 
 /* ------ Search & SearchTag Components ------ */
