--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -21,6 +21,9 @@ html, body {
   --theme__search-bar__background-color: #1b1b1d;
   --theme__search-bar__outline-color: #47474d;
   --theme__title-bar__background-color: #141417;
+  --theme__scrollbar__color: #585858;
+  --theme__scrollbar__color-hover: #505050;
+  --theme__scrollbar__color-active: #404040;
   /* Pimp */
   color: var(--theme__text-color);
 }
@@ -158,21 +161,21 @@ body {
   display: none;
 }
 .simple-scroll::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 calc(0.5 * var(--scrollbar-size)) rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 calc(0.25 * var(--scrollbar-size)) rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.085);
   border-radius: calc(0.5 * var(--scrollbar-size));
 }
 .simple-scroll::-webkit-scrollbar-thumb {
   box-shadow: inset 0 0 calc(0.5 * var(--scrollbar-size));
   border-radius: calc(0.5 * var(--scrollbar-size));
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: var(--theme__scrollbar__color);
   color: rgba(0, 0, 0, 0.5);
 }
 .simple-scroll::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(24, 24, 24, 0.1);
+  background-color: var(--theme__scrollbar__color-hover);
 }
 .simple-scroll::-webkit-scrollbar-thumb:active {
-  background-color: rgba(0, 0, 0, 0.1);
-  color: rgba(0, 0, 0, 0.9);
+  background-color: var(--theme__scrollbar__color-active);
 }
 
 
