Add "publisher" and "dateAdded" to IGameInfo and show them in the BrowseSidebar.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -764,6 +764,10 @@ body {
   user-select: text;
   padding-left: 0.25rem;
 }
+.browse-sidebar__row__date-added {
+  user-select: text;
+  padding-left: 0.25rem;
+}
 
 /* GameList */
 .game-list {
