Add a delete button to each additional application in the sidebar.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -675,12 +675,15 @@ body {
   flex-direction: column;
   flex: 1 0 auto;
 }
-/* BrowserSidebar  */
+/* BrowserSidebar Additional-Application */
 .browse-sidebar__additional-application {
   padding: 0.5rem;
 }
 .browse-sidebar__additional-application:nth-child(2n) {
   background-color: #141417;
+}
+.browse-sidebar__additional-application__delete-button {
+  float: right;
 }
 /* BrowserSidebar Row */
 .browse-sidebar__row {
