--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -1125,27 +1125,29 @@ body {
   margin-left: 0.3rem;
 }
 .playlist-list-item__games {
+  display: block;
 }
 .playlist-list-item__games__game {
   display: inline-block;
   overflow: hidden;
 }
-.playlist-list-item__games__show-all {
+.playlist-list-item__games__fake-game {
   width: calc(var(--width) * 1px);
   height: calc(var(--height) * 1px);
 }
-.playlist-list-item__games__show-all:hover {
+.playlist-list-item__games__fake-game:hover {
   color: #e6e6e6;
   cursor: pointer;
 }
-.playlist-list-item__games__show-all__inner {
+.playlist-list-item__games__fake-game__inner {
   padding: calc(var(--width) * 0.0025rem);
   width: 100%;
   height: calc(var(--width) * 1px);
 }
-.playlist-list-item__games__show-all__inner__box {
+.playlist-list-item__games__fake-game__inner__box {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   /* Center text */
   text-align: center;
   display: flex;
@@ -1157,7 +1159,11 @@ body {
   border: 1px solid #141417;
   box-shadow: 0px 2px 4px 0px #09090a;
 }
-.playlist-list-item__games__show-all__text {
+.playlist-list-item__games__fake-game__text {
+  font-weight: bold;
+  user-select: none;
+}
+.playlist-list-item__games__fake-game__input {
   font-weight: bold;
   user-select: none;
 }
