Empty the playlists page Rename CSS classes that were exclusively used in the playlists page that have been moved to the left sidebar

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -1004,11 +1004,11 @@ body {
   min-width: 30em;
   overflow: visible;
 }
-.playlist-page__message {
+.playlist-list__message {
   padding: 1rem;
   text-align: center;
 }
-.playlist-page__message h2 {
+.playlist-list__message h2 {
   margin-bottom: 0.2rem;
 }
 .playlist-list__create-playlist {
