--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -533,22 +533,16 @@ body {
   float: right;
 }
 
+
 /* ------ Home ------ */
-.home {
+.home-page {
   width: 100%;
   height: 100%;
-  padding: 1em;
-  text-align: center;
+  overflow: auto;
 }
-.home__title {
-  font-size: 2.5em;
-}
-.home__subtitle {
-  font-size: 1.1em;
-  padding-bottom: 1em;
-}
-.home__tutorial {
-  line-height: 1.35;
+.home-page__inner {
+  min-width: 30em;
+  overflow: visible;
 }
 
 
@@ -995,15 +989,6 @@ body {
 
 
 /* ------ Playlist ------ */
-.playlist-page {
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-}
-.playlist-page__inner {
-  min-width: 30em;
-  overflow: visible;
-}
 .playlist-list__message {
   padding: 1rem;
   text-align: center;
