Several unrelated minor changes Deselect the current game when selecting a different playlist. Deselect the current playlist when deleting it. Make the "No game selected" message in the right sidebar look better.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -662,9 +662,13 @@ body {
   padding: 1em 0;
   text-align: center;
 }
-.game-browser__right--none p {
-  font-size: 1.5em;
+.game-browser__right--none h1 {
+  font-size: 1.3rem;
   font-weight: bold;
+  padding-bottom: 0.2rem;
+}
+.game-browser__right--none p {
+  font-size: 1rem;
 }
 
 /* Browse-Left-Sidebar */
